updated api spec, and added getAllBookings GET
